--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -22,6 +22,8 @@ dependencies = [
     "sentry-sdk[fastapi]<2.0.0,>=1.40.6",
     "pyjwt<3.0.0,>=2.8.0",
     "torch>=2.6.0",
+    "numpy>=2.2.4",
+    "torchvision>=0.21.0",
 ]
 
 [tool.uv]
