--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -46,7 +46,7 @@ exclude = ["venv", ".venv", "alembic"]
 
 [tool.ruff]
 target-version = "py310"
-exclude = ["alembic"]
+exclude = ["alembic", "*.pth"]
 
 [tool.ruff.lint]
 select = [
