--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -42,11 +42,11 @@ build-backend = "hatchling.build"
 
 [tool.mypy]
 strict = true
-exclude = ["venv", ".venv", "alembic"]
+exclude = ["venv", ".venv", "alembic", ".pth"]
 
 [tool.ruff]
 target-version = "py310"
-exclude = ["alembic", "*.pth"]
+exclude = ["alembic", ".pth"]
 
 [tool.ruff.lint]
 select = [
