--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "torch>=2.6.0",
     "numpy>=2.2.4",
     "torchvision>=0.21.0",
+    "opencv-python>=4.11.0.0"
 ]
 
 [tool.uv]
